# VRCX-0

./: .gitattributes  .oxlintrc.json  Cargo.toml  LICENSE  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-Hant.md  VRCX.sln  eslint.config.mjs  package-lock.json  package.json  tsconfig.typecheck.json  vite.config.js  vite.config.ts  vitest.config.js
.github/: FUNDING.yml  changelog-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badge-downloads.yml  build.yml  github_actions.yml  package-devkit.yml  package-theme-devkit.yml  pr-unit-test.yml  release.yml  unit-test.yml
Dotnet/: LogWatcher.cs  Program.cs  SQLite.cs  StartupArgs.cs  Update.cs  VRCX-0-Cef.csproj  VRCX-0.csproj  WebApi.cs
Dotnet/IPC/: IPCClient.cs
Dotnet/ScreenshotMetadata/: ScreenshotHelper.cs  ScreenshotMetadataDatabase.cs
Installer/: installer.nsi
build-scripts/: create-tauri-updater-manifest.js  prepare-release-version.js  prepare-release-version.ts
crates/application/: Cargo.toml
crates/application/src/: backend_runtime.rs  background_capabilities.rs  error.rs  event_bus.rs  image_cache.rs  lib.rs  mutual_graph_fetch.rs  process_monitor.rs  registry_backup.rs  web_client.rs  world_enrich.rs
crates/application/src/background_capabilities/: discord.rs
crates/application/src/game_log/: ingest.rs  instance_media.rs  processor.rs  runtime.rs  runtime_state.rs
crates/application/src/moderation_sync/: types.rs
crates/application/src/noninteractive_auth/: mod.rs  service.rs
crates/application/src/overlay_activity/: conversions.rs  tests.rs
crates/application/src/prints/: cleanup.rs  favorites.rs  mod.rs
crates/application/src/realtime/: connection.rs  mod.rs  notifications.rs
crates/application/src/realtime/friends/: event_patch.rs  persistence.rs  state.rs  utils.rs
crates/application/src/realtime/invite_automation/: decision.rs  mod.rs  runtime.rs
crates/application/src/realtime/service/: host.rs  lifecycle.rs  lifecycle_enrichment.rs  lifecycle_invite_automation.rs  lifecycle_output.rs  lifecycle_session.rs  lifecycle_tests.rs  lifecycle_world_cache.rs  message_dispatch.rs  types.rs
crates/application/src/social_baseline/: friends.rs  service.rs
crates/application/src/social_baseline/friends/: baseline.rs  entry.rs  mod.rs  profile.rs  state_map.rs  tests.rs
crates/harness/: Cargo.toml
crates/harness/src/: agent.rs  config.rs  entities.rs  error.rs  events.rs  lib.rs  runtime.rs  session.rs
crates/headless/: Cargo.toml
crates/host/: Cargo.toml
crates/host/src/: auto_launch.rs  clipboard.rs  error.rs  game_launch.rs  lib.rs  overlay_notifications.rs  process_status.rs  shell_actions.rs  updater_policy.rs  vrchat_paths.rs  vrchat_registry.rs
crates/host/src/auto_launch/: manager.rs  mod.rs  model.rs  picker.rs  process.rs  tests.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: external_api.rs  lib.rs  llm.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: in_process.rs  lib.rs  server.rs  tools.rs
crates/mcp/src/tools/: activity.rs  favorites.rs  friends.rs  graph.rs  invites.rs  presence.rs
crates/media/: Cargo.toml
crates/media/src/: image_processing.rs  ugc_image_files.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: assistant.rs  legacy_vrcx.rs  lib.rs
crates/persistence/src/common/: query.rs
crates/persistence/src/config/: mod.rs  schema.rs
crates/persistence/src/database/: maintenance.rs  schema.rs  service.rs
crates/persistence/src/feed/: query.rs  types.rs
crates/persistence/src/game_log/: local_queries.rs  query.rs
crates/persistence/src/game_log/local_queries/: mod.rs  mutations.rs  query.rs  rows.rs  sql.rs  tests.rs
crates/persistence/src/social_aggregates/: activity.rs  best_time.rs  caveats.rs  changes.rs  companions.rs  copresence.rs  fading.rs  graph.rs  helpers.rs  invites.rs  mod.rs  recall.rs  tests.rs  types.rs  worlds.rs
crates/runtime-host/: Cargo.toml
crates/runtime-host/src/: context.rs  event_sink.rs  game_log.rs  host_file_access.rs  lib.rs  process_monitor.rs  registry_backup.rs  state.rs
crates/runtime-host/src/notification/: dispatcher.rs  image_file.rs  mod.rs  rendered.rs  user_image.rs
crates/runtime-host/src/notification/discord/: mod.rs  payload.rs  resolve.rs
crates/runtime-host/src/state/: auth_session.rs  background.rs  background_ticks.rs  capabilities.rs  frontend_session.rs  mod.rs  profile_lock.rs  services.rs  startup.rs
crates/runtime-host/src/vr_overlay/: localization.rs
crates/runtime-host/src/vr_overlay/localization/: overlay_notifications.json
crates/runtime-host/src/vr_overlay/surfaces/: wrist.rs
crates/runtime-host/tests/: notification_dispatcher.rs  vr_overlay_wrist_builder.rs
scripts/: extract-overlay-locales.mjs
src/: App.vue  app.js  main.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  bindings_export.rs  bootstrap.rs  error.rs  lib.rs  state.rs
src-tauri/src/adapters/: ipc.rs
src-tauri/src/adapters/ipc/: windows.rs
src-tauri/src/adapters/log_watcher/: tauri_compat.rs
src-tauri/src/api/: app.rs  database.rs
src-tauri/src/api/app/: host_capabilities.rs  paths.rs  screenshots.rs  shell.rs  updates.rs  window.rs
src-tauri/src/commands/application/: assistant.rs  auth_scope.rs  background_mode.rs  mod.rs  registry_backup.rs
src-tauri/src/commands/host/: app_launcher.rs  devkit.rs  fonts.rs  game.rs  ipc_commands.rs  media.rs  mod.rs  registry.rs  shell.rs  theme_debug.rs  updater.rs  vrchat_log.rs  window.rs
src-tauri/src/commands/integrations/external_api/: service.rs
src-tauri/src/commands/local/: config_policy.rs
src-tauri/src/commands/vrchat/auth/: service.rs
src-tauri/src/commands/vrchat/media/: service.rs  types.rs
src-tauri/src/commands/vrchat/users/: service.rs
src-tauri/src/domain/: clipboard.rs  database.rs  discord_rpc.rs  image_cache.rs  ipc.rs  legacy_vrcx.rs  log_watcher.rs  mod.rs  screenshot.rs  update.rs  web_client.rs
src-tauri/src/localization/: mod.rs  shell_locale.rs  shell_strings.json
(+1251 files in other folders)
