[package]
name = "vrcx-0"
version = "2.8.0"
edition = "2021"
default-run = "vrcx-0"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "macos-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
reqwest = { workspace = true, features = [
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
    "socks"
] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "net",
    "io-util"
] }
rustls = { version = "0.23", default-features = false, features = [
    "aws_lc_rs",
    "std"
] }
base64 = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
sys-locale = "0.3"
tauri-plugin-window-state = "2"
percent-encoding = { workspace = true }
tauri-plugin-updater = "2.10.1"
vrcx-0-core = { path = "../crates/core" }
vrcx-0-persistence = { path = "../crates/persistence" }
vrcx-0-integrations = { path = "../crates/integrations" }
vrcx-0-host = { path = "../crates/host" }
vrcx-0-media = { path = "../crates/media" }
vrcx-0-application = { path = "../crates/application" }
vrcx-0-mcp = { path = "../crates/mcp" }
vrcx-0-harness = { path = "../crates/harness" }
vrcx-0-runtime-host = { path = "../crates/runtime-host" }
vrcx-0-vrchat-client = { path = "../crates/vrchat-client" }
specta-typescript = "0.0.9"
specta = { workspace = true }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes"
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk-nvidia-quirk = "1"

[features]
default = ["steamvr-overlay", "openxr-overlay"]
devtools = ["tauri/devtools"]
devkit = ["devtools"]
steamvr-overlay = [
    "vrcx-0-host/steamvr-overlay",
    "vrcx-0-runtime-host/steamvr-overlay"
]
openxr-overlay = [
    "vrcx-0-host/openxr-overlay",
    "vrcx-0-runtime-host/openxr-overlay"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
image = { workspace = true }
vrcx-0-application = { path = "../crates/application", features = [
    "test-utils"
] }
vrcx-0-runtime-host = { path = "../crates/runtime-host", features = [
    "test-utils"
] }
