[package]
name = "vrcx-0-application"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
chrono = { workspace = true }
futures-util = "0.3"
moka = { version = "0.12", features = ["future", "sync"] }
percent-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "sync",
    "time",
    "net",
    "io-util"
] }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
vrcx-0-core = { path = "../core" }
vrcx-0-integrations = { path = "../integrations" }
vrcx-0-media = { path = "../media" }
vrcx-0-persistence = { path = "../persistence" }
vrcx-0-vrchat-client = { path = "../vrchat-client" }
specta.workspace = true

[dev-dependencies]
image = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
