[package]
name = "vrcx-0-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
getrandom = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
vrcx-0-application = { path = "../application" }
vrcx-0-integrations = { path = "../integrations" }
vrcx-0-mcp = { path = "../mcp" }
vrcx-0-persistence = { path = "../persistence" }
vrcx-0-runtime-host = { path = "../runtime-host" }
