[package]
name = "vrcx-0-host"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3"
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hex = "0.4"
open = "5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.11"
sysinfo = "0.39"
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vrcx-0-core = { path = "../core" }
walkdir = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.56"
