[package]
name = "vrcx-0-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
steamvr-overlay = ["dep:openvr"]
openxr-overlay = ["dep:openxr", "dep:ash"]

[dependencies]
arboard = "3"
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures-util = "0.3"
fontdb = "0.23"
hex = "0.4"
open = "5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.11"
specta.workspace = true
sysinfo = "0.39"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
url = { workspace = true }
vrcx-0-core = { path = "../core" }
vrcx-0-vr-overlay = { path = "../vr-overlay" }
walkdir = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.56"

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
openvr = { version = "0.9", optional = true }
openxr = { version = "0.21", optional = true, default-features = false, features = [
    "loaded"
] }
ash = { version = "0.38", optional = true }
