[package]
name = "vrcx-0-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
