[package]
name = "vrcx-0-media"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
fast_rsync = "0.2"
fast_image_resize = { version = "6.0.0", features = [
    "image",
    "only_u8x4",
    "rayon"
] }
hex = "0.4"
image = { workspace = true }
sha2 = "0.11"
serde_json = { workspace = true }
thiserror = { workspace = true }
vrcx-0-core = { path = "../core" }
walkdir = { workspace = true }
webp = "0.3.1"
specta.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
