[package]
name = "vrcx-0-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "backup"] }
sea-query = { version = "1.0.1", default-features = false, features = [
    "backend-sqlite"
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
vrcx-0-core = { path = "../core" }
